combine install and removal of install scripts
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -3,8 +3,7 @@ FROM debian:stable-slim
 ENV DEBIAN_FRONTEND=noninteractive
 
 COPY ./scripts /
-RUN /install.sh
-RUN rm install*
+RUN /install.sh && rm /install*
 
 EXPOSE 9000
 VOLUME ["/var/www/app", "/var/www/xhprof"]
