add mhsendmail to support mailcatcher in development
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/5.6/scripts/etc/php/5.6/mods-available/development.ini
+++ b/5.6/scripts/etc/php/5.6/mods-available/development.ini
@@ -2,3 +2,5 @@
 date.timezone = "Europe/Brussels"
 display_errors = On
 error_reporting = -1
+
+sendmail_path = "/usr/local/lib/mhsendmail --smtp-addr=mailcatcher:1025"
