--- a/7.0/scripts/etc/php/7.0/mods-available/development.ini
+++ b/7.0/scripts/etc/php/7.0/mods-available/development.ini
@@ -2,3 +2,5 @@
 date.timezone = "Europe/Brussels"
 display_errors = On
 error_reporting = -1
+
+sendmail_path = "/usr/local/lib/mhsendmail --smtp-addr=mailcatcher:1025"
