dont make /phpapp a volume by default
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -6,7 +6,7 @@ COPY ./scripts /
 RUN /install.sh && rm /install*
 
 EXPOSE 9000
-VOLUME ["/phpapp", "/xhprof"]
+VOLUME ["/xhprof"]
 WORKDIR /phpapp
 
 ENTRYPOINT ["/command.sh"]
