introduce DW_PHP_VERSION to increase consistency
Wherever possible the DW_PHP_VERSION env var can be used, this makes the
maintenance of the scripts a lot easier since all are the same now.

Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:stretch-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
+ENV DW_PHP_VERSION=7.0
 
 COPY ./scripts /
 RUN /install.sh && rm /install*
