--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:stretch-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
+ENV DW_PHP_VERSION=7.2
 
 COPY ./scripts /
 RUN /install.sh && rm /install*
