--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,15 @@ build:7.3:
   only:
     - master
 
+build:7.4:
+  stage: build
+  tags:
+    - dockerwest
+  script:
+    - cd 7.4; ./build.sh
+  only:
+    - master
+
 release:5.6:
   stage: release
   tags:
@@ -105,6 +114,15 @@ release:7.3:
   only:
     - master
 
+release:7.4:
+  stage: release
+  tags:
+    - dockerwest
+  script:
+    - docker push dockerwest/php:7.4
+  only:
+    - master
+
 trigger:php-laravel:
   stage: trigger
   trigger:
@@ -129,3 +147,8 @@ trigger:php-symfony:
   stage: trigger
   trigger:
     project: DockerWest/php-symfony
+
+trigger:php-sylius:
+  stage: trigger
+  trigger:
+    project: DockerWest/php-sylius
