add php >= 7.4 opcache preload file configuration
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/7.4/scripts/etc/php/7.4/mods-available/opcache_settings.ini
+++ b/7.4/scripts/etc/php/7.4/mods-available/opcache_settings.ini
@@ -5,3 +5,5 @@ opcache.max_accelerated_files=10000
 opcache.validate_timestamps=0
 opcache.consistency_checks=0
 opcache.save_comments=1
+
+opcache.preload=/phpapp/preload.php
